# fitme

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
docs/git-project-commands/: project-structure.md  setup-commands.md  setup-commands.sh
docs/plans/: 01-persistence.md  02-time-series.md  03-more-garmin.md  04-manual-inputs.md  05-export-backup.md  06-open-food-facts.md  07-workout-detail.md  CLAUDE.md  README.md
pages/: 2_Trends.py  3_Activities.py  4_Training.py  5_Food.py  8_Strength.py  9_Backup.py  CLAUDE.md
src/fitme/: CLAUDE.md  __init__.py  analysis.py  config.py  db.py  db_schema.py  export.py  garmin.py  ingest.py  logging_config.py  login.py  openfoodfacts.py  queries.py  repository.py
