[project]
name = "fitme"
version = "0.1.0"
description = "Personal app to track fitness evolution using Garmin Connect data, training routine and food log."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.3.3",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fitme"]

[tool.ruff]
line-length = 100
target-version = "py312"
